fixed some alignement issues

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 h2 {
   font-size: 26px;
   font-weight: 400;
-  margin: 0 10px 10px 10px;
+  margin: 0 1% 1% 1%;
   text-align: center;
 }
 
@@ -22,7 +22,7 @@ p {
 }
 
 section {
-  padding: 20px;
+  padding: 4%;
 }
 
 section.alternate-background {
@@ -32,13 +32,12 @@ section.alternate-background {
 
 main img {
   width: 100%;
-  margin: 0 20x 20px 0px;
 }
 
 /* ---  Groups & Items --- */
 
 .group {
-  width: 100%;
+  width: 70%;
   display: flex;
   flex-direction: column;
   text-align: start;
@@ -46,10 +45,6 @@ main img {
 
 .group img {
   width: 100%;
-}
-
-.flex-start {
-  align-items: flex-start;
 }
 
 .item {
@@ -65,21 +60,21 @@ main img {
 
 header {
   background-color: #ff385c;
-  padding: 20px 20px 0 20px;
+  padding: 2% 2% 0 2%;
   text-align: center;
 }
 
 .logo {
   font-family: "Pangolin", cursive;
-  font-size: 72px;
+  font-size: 60px;
   color: #fff;
+  text-align: center;
 }
 
-header nav ul {
+#menu {
   display: flex;
-  margin: 10ps 0px 15px 50px;
-  padding-bottom: 0px;
-  max-width: 25%
+  justify-content: center;
+  padding-bottom: 15px;
 }
 
 header nav ul li {
@@ -97,52 +92,24 @@ header nav ul li a:hover {
   text-decoration: none;
 }
 
-.form-info {
-  display: flex;
-  flex-wrap: wrap;
-  border-radius: 6px;
-}
-
-.form {
+/* -------  Search Form ------- */
+form {
+  border: 2px solid #ff385c;
+  padding: 1%;
   display: flex;
   flex-direction: column;
 }
 
-.label {
-  margin-left: 15px;
-}
-
-.input {
-  float: right;
-  margin: 0px 20px 20px 0px;
-}
-
-.dropdown [
-  float: right;
-  width: 50%;
-]
-
-/* -------  Search Form ------- */
-form {
-  border: 2px solid #ff385c;
-  padding: 10px;
-  font-family: sans-serif;
-}
-
 form label {
-  display: inline-block;
-  color: #282e33;
-  margin-bottom: 8px;
-  font-size: 12px;
+  flex: 1;
   font-weight: bold;
+  margin: 10px;
 }
 
 form select,
 form input {
-  margin-bottom: 20px;
-  width: 50%;
-  margin-right: 15px;
-  font-size: 12px;
+  margin: 10px 10px 20px 10px;
+  flex: 2;
 }
 
 form button {
@@ -152,7 +119,7 @@ form button {
   font-size: 24px;
   padding: 15px;
   width: 100%;
-  margin: 0px 20px 0px 0px;
+  flex: 1;
 }
 
 /* -------  Footer ------- */
@@ -171,82 +138,40 @@ footer p {
 @media all and (min-width: 600px) {
   header {
     display: flex;
-    background-color: white;
-    background-color: #ff385c;
-    padding: 20px 20px 0 20px;
-    height: 30px;
+    justify-content: space-between;
+  }
+  nav {
+    padding-top: 10px;
+  }
+
+  #menu {
+    flex-wrap: wrap;
+    line-height: 1.4;
+  }
+
+  form{
+    flex-direction: row;
+    justify-content: space-between;
   }
 
   .logo {
-    display: inline-flex;
-    align-self: center;
-    font-family: "Pangolin", cursive;
-    font-size: 24px;
-    color: white;
-    margin: 0px 0px 20px 0px;
+    font-size: 72px;
   }
 
-  header nav ul {
-    padding-bottom: 0px;
-    max-width: 25px;
-    align-self: flex-end;
-    font-size: 10px;
-    margin: 0px 0px 40px 0px;
+  .form-group {
+    flex-direction: column;
+    min-width: 0;
   }
 
-  form {
-    border: 2px solid #ff385c;
-    padding: 10px;
-    font-family: sans-serif;
+  .idea {
+    flex-direction: column;
+  }
+
+  .host-group, #host .item {
     display: flex;
-    height: 35px;
+    flex-direction: column;
+    justify-content: center;
   }
 
-  form select,
-  form input {
-    width: 70%;
-    font-size:  12px;
-    margin-bottom: 10px;
-  }
-
-  .label {
-    float: left;
-    margin: 0px 0px 0px 0px;
-  }
-
-  .input {
-    float: left;
-  }
-
-  .dropdown {
-    float: right;
-    width: 100%;
-    margin: 0px 0px 0px 0px;
-  }
-
-  .button {
-    background-color: #ff385c;
-    border: none;
-    color: white;
-    font-size: 14px;
-    padding: 10px;
-    width: 30%;
-    justify-content: right;
-    margin: 0px 20px 0px 20%;
-  }
   
-  .img-about {
-    max-width: 25%;
-  }
-
-  .container {
-    display: flex;
-    align-items: right;
-    justify-content: right;
-  }
-
-  .p-about {
-    flex-basis: 40%;
-    padding-left: 50%;
-  }
 }
